connection of contact-page with backend and some little changes

--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -66,22 +66,16 @@
         <div class="info-item">
           <div class="icon">📍</div>
           <div class="info-content">
-            <h3 data-i18n="contact_locations_title">Our Locations</h3>
+            <h3 data-i18n="contact_locations_title">Our Location</h3>
             <p data-i18n="contact_locations_hki">Helsinki: Aleksanterinkatu 15, 00100</p>
-            <p data-i18n="contact_locations_turku">Turku: Aurakatu 8, 20100</p>
-            <p data-i18n="contact_locations_espoo">Espoo: Tapiontori 4, 02100</p>
-            <p data-i18n="contact_locations_tre">Tampere: Hämeenkatu 30, 33100</p>
           </div>
         </div>
 
         <div class="info-item">
           <div class="icon">📞</div>
           <div class="info-content">
-            <h3 data-i18n="contact_phone_title">Phone Numbers</h3>
+            <h3 data-i18n="contact_phone_title">Phone Number</h3>
             <p data-i18n="contact_phone_hki">Helsinki: +358 40 123 4567</p>
-            <p data-i18n="contact_phone_turku">Turku: +358 40 123 4568</p>
-            <p data-i18n="contact_phone_espoo">Espoo: +358 40 123 4569</p>
-            <p data-i18n="contact_phone_tre">Tampere: +358 40 123 4570</p>
           </div>
         </div>
 
@@ -143,17 +137,6 @@
               placeholder="Your phone number"
               data-i18n-placeholder="contact_form_placeholder_phone"
             >
-          </div>
-
-          <div class="form-group">
-            <label for="location" data-i18n="contact_form_label_location">Preferred Location</label>
-            <select id="location" name="location" required>
-              <option value="" data-i18n="contact_form_placeholder_location">Select a location</option>
-              <option value="helsinki" data-i18n="contact_location_option_hki">Helsinki</option>
-              <option value="turku" data-i18n="contact_location_option_turku">Turku</option>
-              <option value="espoo" data-i18n="contact_location_option_espoo">Espoo</option>
-              <option value="tampere" data-i18n="contact_location_option_tre">Tampere</option>
-            </select>
           </div>
 
           <div class="form-group">
