--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title data-i18n="page_title">FreshBite Kitchen | Healthy & Delicious Food</title>
-  <link rel="stylesheet" href="../css/home.css" />
+  <link rel="stylesheet" href="/frontend/css/home.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="images/icon.ico" type="image/x-icon">
 </head>
@@ -78,7 +78,7 @@
         Our menu caters to vegan, gluten-free, and health-conscious customers.
       </p>
       <p data-i18n="about_text3">
-        Currently, we serve our delicious meals in <strong>Helsinki, Turku, Espoo, and Tampere</strong>, 
+        Currently, we serve our delicious meals in <strong>Helsinki</strong>, 
         with plans to expand further. Whether you want a fresh salad, hearty vegan bowl, or healthy juice, 
         we bring nutritious meals straight to your doorstep.
       </p>
@@ -194,20 +194,18 @@
     <div class="review-card">
       <img src="../images/customer2.jpg" alt="Liam" class="review-photo">
       <p data-i18n="review_1_text" data-i18n="review_2_text">“Fast delivery, amazing taste, and the vegan options are incredible!”</p>
-      <h4 data-i18n="review_2_name">– Liam, Turku</h4>
+      <h4 data-i18n="review_2_name">– Liam, Helsinki</h4>
     </div>
 
     <!-- Review 3 -->
     <div class="review-card">
       <img src="../images/customer3.jpg" alt="Emma" class="review-photo">
       <p data-i18n="review_3_text">“Fresh ingredients, beautiful presentation, and friendly staff. Highly recommend!”</p>
-      <h4 data-i18n="review_3_name">– Emma, Espoo</h4>
+      <h4 data-i18n="review_3_name">– Emma, Helsinki</h4>
     </div>
 
   </div>
 </section>
-
-
 
 
   <!-- Footer -->
