Updated the color font for Hero Section.

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -53,8 +53,8 @@
       </video>
 
       <div class="hero-content">
-        <h1 data-i18n="hero_title">Welcome to <span>FreshBite Kitchen</span></h1>
-        <p data-i18n="hero_text">Healthy, delicious, and crafted with care — every meal made fresh for you.</p>
+        <h1 data-i18n="hero_title" style="color: #ff7b00" >Welcome to <span>FreshBite Kitchen</span></h1>
+        <p data-i18n="hero_text" style="color: #ff7b00">Healthy, delicious, and crafted with care — every meal made fresh for you.</p>
       </div>
 
       <a href="#about" class="scroll-down" aria-label="Scroll to content">
