admins can logged in and access admin-dashboard.

--- a/frontend/html/customer_login.html
+++ b/frontend/html/customer_login.html
@@ -60,10 +60,10 @@
         >
       </div>
       <button type="submit" class="btn" data-i18n="login_button">Login</button>
-      <p class="small-text" data-i18n="login_no_account">
-        Don't have an account?
-        <a href="customers_signup.html" id="switchToSignup" data-i18n="login_signup">Sign Up</a>
-      </p>
+       <p class="small-text">
+         <span data-i18n="login_no_account">Don't have an account?</span>
+         <a href="customers_signup.html" id="switchToSignup" data-i18n="login_signup">Sign Up</a>
+       </p>
     </form>
   </div>
 
