--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -30,45 +30,36 @@
     </div>
   </header>
 
-  <!-- Login Form -->
-  <div class="login-wrapper">
-    <div class="login-logo">
-      <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen Logo">
-      <h2>FreshBite Kitchen</h2>
-      <p data-i18n="admin_access">Admin Access Portal</p>
-    </div>
-
-    <form class="form active" id="loginForm">
-      <div class="input-group">
-        <label for="email" data-i18n="login_email_label">Email</label>
-        <input type="email" id="email" placeholder="Enter your email" data-i18n-placeholder="login_email_placeholder" required>
-      </div>
-
-      <div class="input-group">
-        <label for="password" data-i18n="login_password_label">Password</label>
-        <input type="password" id="password" placeholder="Enter your password" data-i18n-placeholder="login_password_placeholder" required>
-      </div>
-
-      <button type="submit" class="btn" data-i18n="login_button">Login</button>
-
-      <p class="small-text" data-i18n="login_no_account">
-        Don't have an account? 
-        <a href="signup.html" id="switchToSignup" data-i18n="login_signup">Sign Up</a>
-      </p>
-    </form>
+<!-- Login Form -->
+<div class="login-wrapper">
+  <div class="login-logo">
+    <img src="../images/logo_sample.jpeg" alt="FreshBite Kitchen Logo">
+    <h2>FreshBite Kitchen</h2>
+    <p data-i18n="admin_access">Admin Access Portal</p>
   </div>
 
-<script>
-  const loginForm = document.getElementById('loginForm');
-  loginForm.addEventListener('submit', function(e) {
-    e.preventDefault();
-    window.location.href = 'admin-dashboard.html';
-  });
-</script>
+  <form class="form active" id="loginForm">
+    <div class="input-group">
+      <label for="email" data-i18n="login_email_label">Email</label>
+      <input type="email" id="email" placeholder="Enter your email" data-i18n-placeholder="login_email_placeholder" required>
+    </div>
+
+    <div class="input-group">
+      <label for="password" data-i18n="login_password_label">Password</label>
+      <input type="password" id="password" placeholder="Enter your password" data-i18n-placeholder="login_password_placeholder" required>
+    </div>
+
+    <button type="submit" class="btn" data-i18n="login_button">Login</button>
+  </form>
+
+
 
 <!-- Language scripts -->
+ <script src="../js/login.js"></script>
 <script src="../js/translations.js"></script>
 <script src="../js/language.js"></script>
+
+
 
 </body>
 </html>
