--- a/frontend/html/find-us.html
+++ b/frontend/html/find-us.html
@@ -48,37 +48,160 @@
   <!-- Hero section -->
   <section class="hero-section">
     <div class="overlay"></div>
-    <img class="hero-image" src="../images/map.jpg" alt="Find FreshBite" />
+    <!-- Use your new hero image here -->
+    <img
+      class="hero-image"
+      src="../images/location1.jpg"
+      alt="Helsinki city navigation map to FreshBite Kitchen"
+    />
     <div class="hero-text">
+      <p class="hero-pill" data-i18n="findus_hero_pill">City Center • Helsinki</p>
       <h1 data-i18n="findus_hero_title">Find <span>FreshBite Kitchen</span></h1>
-      <p data-i18n="findus_hero_text">Your favorite place is just a tap away!</p>
+      <p data-i18n="findus_hero_text">Easy to reach by tram, bus, or on foot.</p>
     </div>
   </section>
 
-  <!-- Options -->
-  <div class="map-options">
+  <!-- Main Find Us Layout -->
+  <main class="findus-main">
+    <section class="findus-layout">
 
-    <!-- Google Maps -->
-    <a class="map-btn google" target="_blank"
-      href="https://www.google.com/maps/search/?api=1&query=FreshBite+Kitchen+Aleksanterinkatu+15+Helsinki">
-      <img src="../images/google-map.jpg" class="map-icon" alt="Google Maps" />
-      <span data-i18n="google_maps">Google Maps</span>
-    </a>
+      <!-- Left: Map -->
+      <div class="map-card">
+        <h2 data-i18n="findus_map_title">See us on the map</h2>
+        <p class="map-subtext" data-i18n="findus_map_text">
+          Explore the area and find the best way to reach us.
+        </p>
 
-    <!-- HSL Journey Planner -->
-    <a class="map-btn hsl" target="_blank" href="https://www.hsl.fi/en">
-      <img src="../images/hsl.jpg" class="map-icon" alt="HSL Journey Planner" />
-      <span data-i18n="hsl_journey">HSL Journey Planner</span>
-    </a>
+        <div class="map-frame-wrapper">
+          <iframe
+            title="FreshBite Kitchen Location"
+            src="https://www.google.com/maps?q=Aleksanterinkatu+15+Helsinki&output=embed"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
 
-    <!-- Apple Maps -->
-    <a class="map-btn apple" target="_blank"
-      href="https://maps.apple.com/?q=FreshBite+Kitchen">
-      <img src="../images/apple-maps.jpg" class="map-icon" alt="Apple Maps" />
-      <span data-i18n="apple_maps">Apple Maps</span>
-    </a>
+        <p class="map-note" data-i18n="findus_map_note">
+          Tip: Zoom in to see nearby tram and bus stops.
+        </p>
+      </div>
 
-  </div>
+      <!-- Right: Details & Directions -->
+      <div class="info-column">
+
+        <!-- Location Card -->
+        <div class="info-card">
+          <h2 data-i18n="findus_visit_title">Visit us in Helsinki</h2>
+          <p class="location-subtext" data-i18n="findus_visit_text">
+            We’re right in the heart of the city, close to shops and transport.
+          </p>
+
+          <div class="location-details">
+            <div class="detail-row">
+              <span class="label" data-i18n="findus_address_label">Address</span>
+              <span class="value">Aleksanterinkatu 15, 00100 Helsinki</span>
+            </div>
+            <div class="detail-row">
+              <span class="label" data-i18n="findus_area_label">Area</span>
+              <span class="value" data-i18n="findus_area_value">City center, near Stockmann</span>
+            </div>
+            <div class="detail-row">
+              <span class="label" data-i18n="findus_public_label">Public transport</span>
+              <span class="value" data-i18n="findus_public_value">
+                Trams and buses via Keskuskatu / Aleksanterinkatu
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Opening Hours Card -->
+        <div class="info-card hours-card">
+          <h2 data-i18n="findus_hours_title">Opening hours</h2>
+          <ul class="hours-list">
+            <li>
+              <span data-i18n="findus_hours_mon_thu_label">Mon–Thu</span>
+              <span>11:00 – 22:00</span>
+            </li>
+            <li>
+              <span data-i18n="findus_hours_fri_sat_label">Fri–Sat</span>
+              <span>11:00 – 23:00</span>
+            </li>
+            <li>
+              <span data-i18n="findus_hours_sun_label">Sunday</span>
+              <span>12:00 – 21:00</span>
+            </li>
+          </ul>
+          <p class="hours-note" data-i18n="findus_hours_note">
+            Public holidays may have special opening times.
+          </p>
+        </div>
+
+        <!-- Map Apps -->
+        <div class="info-card">
+          <h2 data-i18n="findus_directions_title">Get directions</h2>
+          <p class="directions-subtext" data-i18n="findus_directions_text">
+            Choose your favourite app for step-by-step navigation.
+          </p>
+
+          <div class="map-options">
+            <!-- Google Maps -->
+            <a class="map-btn google" target="_blank"
+              href="https://www.google.com/maps/search/?api=1&query=FreshBite+Kitchen+Aleksanterinkatu+15+Helsinki">
+              <img src="../images/google-map.jpg" class="map-icon" alt="Google Maps" />
+              <span data-i18n="google_maps">Google Maps</span>
+            </a>
+
+            <!-- HSL Journey Planner -->
+            <a class="map-btn hsl" target="_blank" href="https://www.hsl.fi/en">
+              <img src="../images/hsl.jpg" class="map-icon" alt="HSL Journey Planner" />
+              <span data-i18n="hsl_journey">HSL Journey Planner</span>
+            </a>
+
+            <!-- Apple Maps -->
+            <a class="map-btn apple" target="_blank"
+              href="https://maps.apple.com/?q=FreshBite+Kitchen">
+              <img src="../images/apple-maps.jpg" class="map-icon" alt="Apple Maps" />
+              <span data-i18n="apple_maps">Apple Maps</span>
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- How to Get Here -->
+    <section class="travel-section">
+      <div class="travel-header">
+        <h2 data-i18n="findus_travel_title">How to get here</h2>
+        <p data-i18n="findus_travel_text">
+          Whether you’re coming by tram, bus, or car, getting to FreshBite Kitchen is simple.
+        </p>
+      </div>
+
+      <div class="travel-grid">
+        <article class="travel-card">
+          <h3 data-i18n="findus_tram_title">By tram</h3>
+          <p data-i18n="findus_tram_text">
+            Several tram lines stop within a short walk. Check HSL Journey Planner for the fastest route.
+          </p>
+        </article>
+
+        <article class="travel-card">
+          <h3 data-i18n="findus_bus_title">By bus</h3>
+          <p data-i18n="findus_bus_text">
+            Many bus lines serve the city center. Get off near Aleksanterinkatu or Keskuskatu stops.
+          </p>
+        </article>
+
+        <article class="travel-card">
+          <h3 data-i18n="findus_car_title">By car</h3>
+          <p data-i18n="findus_car_text">
+            Nearby parking garages are available in the city center. Follow your map app for parking options.
+          </p>
+        </article>
+      </div>
+    </section>
+  </main>
 
   <!-- Footer -->
   <footer>
